Finished HTML for now and Started JavaScript

--- a/index.html
+++ b/index.html
@@ -18,7 +18,53 @@
     </head>
     <body>
         <main>
-
+            <div class="container center">
+                <section>
+                    <div class="input-form">
+                        <form>
+                            <select name="shape" class="shape">
+                                <option value="" selected>Shape</option>
+                                <option value="square">Square</option>
+                                <option value="circle">Circle</option>
+                            </select>
+                            <select name="colour" class="colour">
+                                <option value="" selected>Colour</option>
+                                <option value="09f">Blue</option>
+                                <option value="9f0">Green</option>
+                                <option value="f90">Orange</option>
+                                <option value="f09">Pink</option>
+                                <option value="90f">Purple</option>
+                            </select>
+                            <input type="button" class="create" value="Create">
+                        </form>
+                    </div>
+                    <div class="grid-box">
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                        <div class="there"></div>
+                    </div>
+                    <div class="message">
+                        <p>Please select a Shape and Colour to start</p>
+                    </div>
+                </section>
+            </div>
         </main>
     </body>
 </html>
