--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <div class="input-form">
                         <form>
                             <select name="shape" class="shape">
-                                <option value="" selected>Shape</option>
+                                <option value="" disabled selected hidden>Shape</option>
                                 <option value="square">Square</option>
                                 <option value="circle">Circle</option>
                             </select>
                             <select name="colour" class="colour">
-                                <option value="" selected>Colour</option>
+                                <option value="" disabled selected hidden>Colour</option>
                                 <option value="#09f">Blue</option>
                                 <option value="#9f0">Green</option>
                                 <option value="#f90">Orange</option>
